--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
